--- a/GlucoMan.Maui/HypoPredictionPage.xaml
+++ b/GlucoMan.Maui/HypoPredictionPage.xaml
@@ -87,15 +87,15 @@
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
 
             <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" 
-                   Text="Expected time of target CHO achievement"
+                   Text="Expected time of target glucose achievement"
                    VerticalOptions="End" HorizontalOptions="Center" />
 
             <Label Grid.Row="8" Grid.Column="1" x:Name="txtPredictedHour" Text="----" FontSize="Large"
-                   ToolTipProperties.Text="Hours of the predicted 'low clucose' event"
+                   ToolTipProperties.Text="Hours of the predicted 'low glucose' event"
                    VerticalTextAlignment="Center" HorizontalTextAlignment="Center" 
                    BackgroundColor="SkyBlue" TextColor="Black"/>
             <Label Grid.Row="8" Grid.Column="2" x:Name="txtPredictedMinute" Text="----" FontSize="Large"
-                   ToolTipProperties.Text="Minutes of the predicted 'low clucose' event"
+                   ToolTipProperties.Text="Minutes of the predicted 'low glucose' event"
                    VerticalTextAlignment="Center" HorizontalTextAlignment="Center" 
                    BackgroundColor="SkyBlue" TextColor="Black"/>
 
